tket/tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__globals__test__emit_globals_codegen@pre-mem2reg@llvm21_1.snap
---
source: tket/tket-qsystem/src/llvm/globals.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@__globals__.my_global = global { i1, i16 } { i1 false, i16 poison }
@__globals_lock__.my_global = global i1 false
@0 = private unnamed_addr constant [22 x i8] c"Global already locked\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@1 = private unnamed_addr constant [18 x i8] c"Global not locked\00", align 1
@prelude.panic_template.1 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@2 = private unnamed_addr constant [22 x i8] c"Global already locked\00", align 1
@prelude.panic_template.2 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@3 = private unnamed_addr constant [18 x i8] c"Global not locked\00", align 1
@prelude.panic_template.3 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define internal { i16, i1 } @_hl.main.1(i16 %0, ptr %1, i1 %2, i16 %3) !dbg !3 {
alloca_block:
  %"0" = alloca i16, align 2
  %"1" = alloca i1, align 1
  %"2_0" = alloca i16, align 2
  %"2_1" = alloca ptr, align 8
  %"2_2" = alloca i1, align 1
  %"2_3" = alloca i16, align 2
  %"4_0" = alloca i16, align 2
  %"4_1" = alloca i1, align 1
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store i16 %0, ptr %"2_0", align 2
  store ptr %1, ptr %"2_1", align 8
  store i1 %2, ptr %"2_2", align 1
  store i16 %3, ptr %"2_3", align 2
  %"2_01" = load i16, ptr %"2_0", align 2
  %"2_12" = load ptr, ptr %"2_1", align 8
  %"2_23" = load i1, ptr %"2_2", align 1
  %"2_34" = load i16, ptr %"2_3", align 2
  %global_locked = load i1, ptr @__globals_lock__.my_global, align 1, !dbg !12
  br i1 %global_locked, label %global_lock_error, label %global_lock_continue, !dbg !12

global_lock_error:                                ; preds = %entry_block
  %4 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template, i32 1, ptr @0), !dbg !12
  call void @abort(), !dbg !12
  unreachable, !dbg !12

global_lock_continue:                             ; preds = %entry_block
  store i1 true, ptr @__globals_lock__.my_global, align 1, !dbg !12
  %start_value = load { i1, i16 }, ptr @__globals__.my_global, align 2, !dbg !12
  %5 = insertvalue { i1, i16 } { i1 true, i16 poison }, i16 %"2_01", 1, !dbg !12
  store { i1, i16 } %5, ptr @__globals__.my_global, align 2, !dbg !12
  %global_locked7 = load i1, ptr @__globals_lock__.my_global, align 1, !dbg !12
  %global_unlocked = xor i1 %global_locked7, true, !dbg !12
  br i1 %global_unlocked, label %global_lock_error5, label %global_lock_continue6, !dbg !12

global_lock_error5:                               ; preds = %global_lock_continue
  %6 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.1, i32 1, ptr @1), !dbg !12
  call void @abort(), !dbg !12
  unreachable, !dbg !12

global_lock_continue6:                            ; preds = %global_lock_continue
  store i1 false, ptr @__globals_lock__.my_global, align 1, !dbg !12
  %call_func = call i1 %"2_12"(i1 %"2_23", i16 %"2_34"), !dbg !12
  %global_locked10 = load i1, ptr @__globals_lock__.my_global, align 1, !dbg !12
  br i1 %global_locked10, label %global_lock_error8, label %global_lock_continue9, !dbg !12

global_lock_error8:                               ; preds = %global_lock_continue6
  %7 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.2, i32 1, ptr @2), !dbg !12
  call void @abort(), !dbg !12
  unreachable, !dbg !12

global_lock_continue9:                            ; preds = %global_lock_continue6
  store i1 true, ptr @__globals_lock__.my_global, align 1, !dbg !12
  %end_value = load { i1, i16 }, ptr @__globals__.my_global, align 2, !dbg !12
  %8 = extractvalue { i1, i16 } %end_value, 1, !dbg !12
  store { i1, i16 } %start_value, ptr @__globals__.my_global, align 2, !dbg !12
  %global_locked13 = load i1, ptr @__globals_lock__.my_global, align 1, !dbg !12
  %global_unlocked14 = xor i1 %global_locked13, true, !dbg !12
  br i1 %global_unlocked14, label %global_lock_error11, label %global_lock_continue12, !dbg !12

global_lock_error11:                              ; preds = %global_lock_continue9
  %9 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.3, i32 1, ptr @3), !dbg !12
  call void @abort(), !dbg !12
  unreachable, !dbg !12

global_lock_continue12:                           ; preds = %global_lock_continue9
  store i1 false, ptr @__globals_lock__.my_global, align 1, !dbg !12
  store i16 %8, ptr %"4_0", align 2, !dbg !12
  store i1 %call_func, ptr %"4_1", align 1, !dbg !12
  %"4_015" = load i16, ptr %"4_0", align 2
  %"4_116" = load i1, ptr %"4_1", align 1
  store i16 %"4_015", ptr %"0", align 2
  store i1 %"4_116", ptr %"1", align 1
  %"017" = load i16, ptr %"0", align 2
  %"118" = load i1, ptr %"1", align 1
  %mrv = insertvalue { i16, i1 } poison, i16 %"017", 0
  %mrv19 = insertvalue { i16, i1 } %mrv, i1 %"118", 1
  ret { i16, i1 } %mrv19
}

declare i32 @printf(ptr, ...)

declare void @abort()

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{!7, !9, !11, !10, !9}
!7 = !DICompositeType(tag: DW_TAG_structure_type, name: "{ i16, i1 }", file: !2, size: 16, align: 8, elements: !8)
!8 = !{!9, !10}
!9 = !DIBasicType(name: "i16", size: 16, encoding: DW_ATE_unsigned)
!10 = !DIBasicType(name: "i1", size: 1, encoding: DW_ATE_unsigned)
!11 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!12 = !DILocation(line: 27062, column: 402, scope: !3)
