tket/tket-qsystem/src/llvm/snapshots/tket_qsystem__llvm__globals__test__emit_globals_codegen@pre-mem2reg@llvm21_2.snap
---
source: tket/tket-qsystem/src/llvm/globals.rs
expression: mod_str
---
; ModuleID = 'test_context'
source_filename = "test_context"

@0 = private unnamed_addr constant [39 x i8] c"No global provided for GlobalsOp::With\00", align 1
@prelude.panic_template = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@__globals__.my_global = global { i1, i16 } { i1 false, i16 poison }
@__globals_lock__.my_global = global i1 false
@1 = private unnamed_addr constant [22 x i8] c"Global already locked\00", align 1
@prelude.panic_template.1 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1
@2 = private unnamed_addr constant [18 x i8] c"Global not locked\00", align 1
@prelude.panic_template.2 = private unnamed_addr constant [34 x i8] c"Program panicked (signal %i): %s\0A\00", align 1

define internal void @_hl.main.1(ptr %0) !dbg !3 {
alloca_block:
  %"2_0" = alloca ptr, align 8
  %"0" = alloca i16, align 2, !dbg !8
  br label %entry_block

entry_block:                                      ; preds = %alloca_block
  store ptr %0, ptr %"2_0", align 8
  %"2_01" = load ptr, ptr %"2_0", align 8
  %global_locked = load i1, ptr @__globals_lock__.my_global, align 1, !dbg !8
  br i1 %global_locked, label %global_lock_error, label %global_lock_continue, !dbg !8

global_is_none:                                   ; preds = %5
  %1 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template, i32 1, ptr @0), !dbg !8
  call void @abort(), !dbg !8
  unreachable, !dbg !8

global_is_some:                                   ; preds = %6
  %global_0 = load i16, ptr %"0", align 2, !dbg !8
  store { i1, i16 } { i1 false, i16 poison }, ptr @__globals__.my_global, align 2, !dbg !8
  %call_func = call i16 %"2_01"(i16 %global_0), !dbg !8
  %2 = insertvalue { i1, i16 } { i1 true, i16 poison }, i16 %call_func, 1, !dbg !8
  store { i1, i16 } %2, ptr @__globals__.my_global, align 2, !dbg !8
  %global_locked4 = load i1, ptr @__globals_lock__.my_global, align 1, !dbg !8
  %global_unlocked = xor i1 %global_locked4, true, !dbg !8
  br i1 %global_unlocked, label %global_lock_error2, label %global_lock_continue3, !dbg !8

global_lock_error:                                ; preds = %entry_block
  %3 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.1, i32 1, ptr @1), !dbg !8
  call void @abort(), !dbg !8
  unreachable, !dbg !8

global_lock_continue:                             ; preds = %entry_block
  store i1 true, ptr @__globals_lock__.my_global, align 1, !dbg !8
  %start_value = load { i1, i16 }, ptr @__globals__.my_global, align 2, !dbg !8
  %4 = extractvalue { i1, i16 } %start_value, 0, !dbg !8
  switch i1 %4, label %5 [
    i1 true, label %6
  ], !dbg !8

5:                                                ; preds = %global_lock_continue
  br label %global_is_none, !dbg !8

6:                                                ; preds = %global_lock_continue
  %7 = extractvalue { i1, i16 } %start_value, 1, !dbg !8
  store i16 %7, ptr %"0", align 2, !dbg !8
  br label %global_is_some, !dbg !8

global_lock_error2:                               ; preds = %global_is_some
  %8 = call i32 (ptr, ...) @printf(ptr @prelude.panic_template.2, i32 1, ptr @2), !dbg !8
  call void @abort(), !dbg !8
  unreachable, !dbg !8

global_lock_continue3:                            ; preds = %global_is_some
  store i1 false, ptr @__globals_lock__.my_global, align 1, !dbg !8
  ret void
}

declare i32 @printf(ptr, ...)

declare void @abort()

!llvm.module.flags = !{!0}
!llvm.dbg.cu = !{!1}

!0 = !{i32 2, !"Debug Info Version", i32 3}
!1 = distinct !DICompileUnit(language: DW_LANG_Python, file: !2, producer: "hugr_llvm_test", isOptimized: false, runtimeVersion: 0, emissionKind: FullDebug)
!2 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "/lPNzlV/ClAphFG/yrhvZs/eDgUn/eIVwAutKJHaZEPSZwPXPeycUvnujGxZ")
!3 = distinct !DISubprogram(name: "_hl.main.1", linkageName: "_hl.main.1", scope: null, file: !4, line: 25254, type: !5, scopeLine: 25255, spFlags: DISPFlagLocalToUnit | DISPFlagDefinition, unit: !1)
!4 = !DIFile(filename: "/cmJrSnVYeXFf/zCkHdtWCCnkJhPKiWSKICgZuRNRvR/mbrfVq.gpy.py", directory: "")
!5 = !DISubroutineType(types: !6)
!6 = !{null, !7}
!7 = !DIBasicType(name: "ptr", size: 64, encoding: DW_ATE_address)
!8 = !DILocation(line: 27062, column: 402, scope: !3)
